[tool.poetry]
name = "database-with-hh-ru"
version = "0.1.0"
description = ""
authors = ["user <kosareva.karina2013@yandex.ru>"]
readme = "README.md"
packages = [{include = "database_with_hh"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
